--- a/src/main/resources/application-devlocal.properties
+++ b/src/main/resources/application-devlocal.properties
@@ -2,13 +2,22 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/exam?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+# SB automatically configures this Driver class but we can give explicitly also
 spring.datasource.driver-class=com.cj.jdbc.Driver
 
 
 #jpa configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Create table only first time when entities are found
+# if used create, then create every time
 spring.jpa.hibernate.ddl-auto=update
+
+#Show fired query on console
 spring.jpa.show-sql=true
+
+# Queries should be formated
 #spring.jpa.properties.hibernate.format_sql=true
 
 
